[project]
name = "sam_audio"
version = "0.1.0"
description = "Segment Anything Audio"
authors = [
    { name="Andros Tjandra", email="androstj@meta.com" },
    { name="Ann Lee", email="annl@meta.com" },
    { name="Bowen Shi", email="bshi@meta.com" },
    { name="Julius Richter", email="jrichter@meta.com" },
    { name="Matt Le", email="mattle@meta.com" },
    { name="Yi-Chiao Wu", email="yichiaowu@meta.com" },
]

readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "dacvae",
    "audiobox_aesthetics",
    "einops",
    "imagebind",
    "laion-clap",
    "numpy",
    "perception-models",
    "pydub",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "torchcodec",
    "torchdiffeq",
    "torchvision>=0.20.0",
    "transformers>=4.54.0",
]

[tool.setuptools.packages.find]
include = ["sam_audio*"]

[tool.ruff]

target-version = "py311"

lint.select=[
    "B",
    "C",
    "E",
    "W",
    "F",
    "I",
]
lint.ignore = [
    "E501",
    "E731",
    "C901",
    "B006",
]

[project.urls]
Homepage = "https://github.com/facebookresearch/sam-audio"
Repository = "https://github.com/facebookresearch/sam-audio"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ========== uv設定（CUDA 12.6対応） ==========

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
# Git依存関係
dacvae = { git = "https://github.com/facebookresearch/dacvae.git" }
imagebind = { git = "https://github.com/facebookresearch/ImageBind.git" }
laion-clap = { git = "https://github.com/lematt1991/CLAP.git" }
perception-models = { git = "https://github.com/facebookresearch/perception_models.git", branch = "unpin-deps" }

# PyTorchパッケージ（CUDA 12.6インデックスから取得）
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
# torchcodecはWindows用CUDA wheelがないためPyPIから取得
